modify Jazz post, modify head.html

--- a/_posts/2021-08-11-Jazz_note_1.md
+++ b/_posts/2021-08-11-Jazz_note_1.md
@@ -92,6 +92,10 @@ lang: zh
 
 Sus$$♭9$$和弦还会出现在旋律小调音阶的第二个调式中，这里我们就放一起讲讲好了，毕竟 Phrygian 是大调音阶中一个极具小调色彩的调式。旋律小调的调式可以参考后面的图，它的第二个调式可被称为 Dorian $$♭2$$ 调式。它与 Phrygian 的不同主要在于它的六音是个自然六音。遇到sus$$♭9$$和弦时，这两个音阶都是可以考虑演奏的哦。
 
+<div class="embed-resposive embed-responsive-16by9" style="text-align: center;">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/x1Pues6F1eg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 既然说到了 Phrygian 调式，那就必须多说几句。首先嘛，日本的都节调式和 Phrygian 听起来味道还蛮对的，有一种幽暗沉郁的意味，我们可以去听听经典的《さくら》；用 Phrygian 也可以创作出极具压迫力的歌曲，毕竟它是一个极度黑暗的调式！这里可以听听 “God of War III Overture”；我之前看了盖里奇的《绅士们》，对里面 “Shimmy Shimmy Ya” 这首歌留下深刻印象。我个人感觉这是一首写在 B Phrygian 上的歌。盖里奇导演的《阿拉丁》片头的由 Will Smith 唱的 “Arabian Nights” 也开始在 G Phrygian 上。这里顺便多扯两句，盖里奇电影的配乐很喜欢使用半音，和他电影黑色幽默的风格相得益彰，比如还有《大侦探福尔摩斯》中由 Hans Zimmer 写的 “Discombobulate” (可惜这里不是 Phrygian，而应该是写在 d 小调上)，还有《偷拐抢骗》里面的 “Ghost Town”(可惜这个应该是写在 c 和声小调上的，不过也许可以解释成 Phrygian dominant)，所以时常出现一下 Phrygian 调式也蛮合情合理。
 
 ![Guy](/hao-blog/assets/images/2021_08_11/giphy.gif)
@@ -110,7 +114,7 @@ Sus$$♭9$$和弦还会出现在旋律小调音阶的第二个调式中，这里
 
 #### 2.3 自然小调音阶
 
-**Aeolian** 调式构成自然小调音阶。对于 C Aeolian 来说，它恰好是 a 自然小调音阶。它也是 C 大调的**关系小调**。在爵士中自然小调用得很少，然而流行歌是非常喜欢用的。自然小调里面一个有意思的进行是将小和弦的五音升高半音到降六音，当然我们可以继续升半音到原位六音。这样的进行有一种悬疑的感觉，例如007的电影主题曲就是这样的。之后的每一首007电影歌曲 (像是 Adele 的 “Skyfall” 或者 Billie 的 “No Time To Die”) 里好像都可以找到这个进行哦 (Billie 在开头就点了题，大家可以去听听看哦, 或者听听出于版权原因的穷人版 “Skyfall” 吧)。
+**Aeolian** 调式构成自然小调音阶。对于 C Aeolian 来说，它恰好是 a 自然小调音阶。它也是 C 大调的**关系小调**。在爵士中自然小调用得很少，然而流行歌是非常喜欢用的。自然小调里面一个有意思的进行是将小和弦的五音升高半音到降六音，当然我们可以继续升半音到原位六音。这样的进行有一种悬疑的感觉，例如007的电影主题曲就是这样的。之后的每一首007电影歌曲 (像是 Adele 的 “Skyfall” 或者 Billie 的 “No Time To Die”) 里好像都可以找到这个进行哦 (Billie 在开头就点了题，大家可以去听听看哦)。
 
 ![image-20210811140912394](/hao-blog/assets/images/2021_08_11/image-20210811140912394.png)
 
@@ -150,7 +154,7 @@ Sus$$♭9$$和弦还会出现在旋律小调音阶的第二个调式中，这里
 
 #### 3.3 Lydian/ Augmented/ Dominant
 
-Lydian是大调的第四调式，我们在 Ionian 里提到过。之所以放到这里来讲，那是因为它还有两个很不错的变体要靠小调音阶来产生。据说 Lydian 有一种要起飞的感觉，它在电影中会有着普遍的应用。久石让的《天空の城ラピュタ》开头先是 C Dorian 调式，接着第一个和弦似乎就是 D$$♭$$ Lydian啦! 坂本龙一的 “Rain” 也是在 Lydian 上开场，给人一种即将解脱的感觉。此外还有 Columbia 电影女神的片头开场曲，一个 C Lydian 转 E$$♭$$ Lydian，电影就要开场了！~~相较之下，广电总局的 C 大调开场那是真的符合总局光明正派的气质。~~ 升四音会有一种强烈的漂浮感，仿佛要羽化而登仙。Dorian 调式在电影里好像也蛮常见的，久石让的音乐里经常可以找到。另外在爱尔兰民歌里好像也蛮常见的。它有一种怀古般的情绪，不过在书里面几乎就没怎么提了。 
+Lydian是大调的第四调式，我们在 Ionian 里提到过。之所以放到这里来讲，那是因为它还有两个很不错的变体要靠小调音阶来产生。据说 Lydian 有一种要起飞的感觉，它在电影中会有着普遍的应用。久石让在电影《天空之城》中写的《シータの決意》开头先是 C Dorian 调式，接着第一个和弦似乎就是 D$$♭$$ Lydian啦! 坂本龙一的 “Rain” 也是在 Lydian 上开场，给人一种即将解脱的感觉。此外还有 Columbia 电影女神的片头开场曲，一个 C Lydian 转 E$$♭$$ Lydian，电影就要开场了！~~相较之下，广电总局的 C 大调开场那是真的符合总局光明正派的气质。~~ 升四音会有一种强烈的漂浮感，仿佛要羽化而登仙。Dorian 调式在电影里好像也蛮常见的，久石让的音乐里经常可以找到。另外在爱尔兰民歌里好像也蛮常见的。它有一种怀古般的情绪，不过在书里面几乎就没怎么提了。 
 
 
 
@@ -197,10 +201,37 @@ McCoy Tyne 在 Wayne Shorter 的 “Juju” 中演奏的前奏就是全音音阶
 
 ![image-20210812114047579](/hao-blog/assets/images/2021_08_11/image-20210812114047579.png)
 
-### 6. Summary
+### 6. 写在最后
 
-既然大家都看到这里了，那么就一起来听听所有的歌吧！下面的歌单已经按照所有歌曲被提及的顺序排好了，不过网易云的外链好像会有 bug，我也不知道解决方案。大家如果遇到了的话，有兴趣就去网易云上找找这个歌单来听吧哈哈哈。
+下面按顺序列出了所有提及的歌曲，大家既然都到这里了那就稍微听一听吧~ 话说在弄这个的时候遇到了一些技术上的问题。本来最简单就是在网易云里建一个歌单，生成外链后再用 iframe 嵌入进来。不过这总是会通知显示资源加载失败，不知道是不是因为 http 资源被禁的缘故，我是实在搞不明白。所以最后就在网上把所有歌一首一首搜下来，再跟着油管教程写了一个不能再朴素的播放列表。这样做一来可能会有严重的版权问题，二来 github 的免费服务器上要丢的东西一下多了很多，求诸位稍稍放过。如果诸位之中有知道网易云解决办法的一定要告诉我哇！
 
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="330" height="450" src="//music.163.com/outchain/player?type=0&id=6913757364&auto=1&height=430"></iframe>
-
-
+<audio src="" controls id="audioPlayer">
+  Sorry, your browser doesn't support html5!
+</audio>
+<ul id="playlist">
+  <li class="current-song"><a href="/hao-blog/assets/audios/Jazz One/Katrina_Ballerina.mp3">Katrina Ballerina</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/Black Narcissus.mp3">Black Narcissus</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/Maiden Voyage.mp3">Maiden Voyage</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/Mr Day.mp3">Mr Day</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/That Summer.mp3">あの夏へ</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/Someday My Prince will Come.mp3">Someday My Prince will Come</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/God Of War III Overture.mp3">God Of War III Overture</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/El Michels Affair - Shimmy Shimmy Ya.mp3">Shimmy Shimmy Ya</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/Arabian Nights (2019).mp3">Arabian Nights (2019)</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/Discombobulate.mp3">Discombobulate</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/The Specials - Ghost Town-320k.mp3">Ghost Town</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/moonlight sonata.mp3">Moonlight</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/Beethoven Piano Sonata No.23 Op.57 'Appassionata' 3rd 320k.mp3">Appassionata</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/JOJO SONO CHINO SADAME-320k.mp3">ジョジョ~その血の運命</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/Adele - Skyfall.mp3">Skyfall</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/Billie Eilish - No Time To Die-320k.mp3">No Time To Die</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/army of me (HD).mp3">Army of Me</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/Castle in the Sky Sheeta's Decision.mp3">シータの決意</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/The Last Emperor 1987 _ OST RAIN Ryuichi Sakamoto Live 2013 Mixed with the Movie Cuts-320k.mp3">Rain</a></li>
+  <li><a href="/hao-blog/assets/audios/Jazz One/juju.mp3">Juju</a></li>
+  <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
+  <script src="/hao-blog/assets/javascripts/audioPlayer.js"></script>
+  <script>
+    audioPlayer();
+  </script>
+</ul>
