--- a/_posts/2021-08-11-Jazz_note_1.md
+++ b/_posts/2021-08-11-Jazz_note_1.md
@@ -19,7 +19,7 @@ lang: zh
 
 ### 1. Introduction
 
-在开始前先来说两句个人的想法，可能非常错误，大家随意批评，我以后再看肯定也会有新的体会。总归来说，**音乐还是用耳朵听的**。很多人可能会把音乐简单划分成好听或者不好听，这划分得有点太粗糙。细致点来讲，我们可以从情绪上去体会音乐，从色彩上去感知音乐。有的歌可能是忧郁、黯淡的，或者轻快、明亮的。一个人可能是会喜欢或不喜欢这样的风格，但不可否认作品的音乐性。~~当然，也有色彩上乱七八糟、情绪上仿佛便秘的作品——比如说我写的——这时用难听来说那也是蛮合适的。~~ 对于一个作品的音乐性，我们可以从很多角度去进行分析: 旋律、节奏、结构、和声、配器、音色等等等等。不过在观念上切不可以本末倒置: **音乐总是先行的**，然后才是理论。分析，与其说是给作品设立范式，不如说是对音乐现象的解释。于是还是那句话: "先跟着听，然后开始。" 
+在开始之前，先来说两句个人的想法，可能非常错误，我以后肯定也会有新的体会，大家随意批评就好。先来说说音乐作品的评判标准。总归来说，**音乐还是用耳朵听的**。很多人可能会把音乐简单划分成好听或者不好听，这划分得有点太粗糙。细致点来讲，我们可以从情绪上去体会音乐，从色彩上去感知音乐。有的歌可能是忧郁、黯淡的，或者轻快、明亮的。一个人可能是会喜欢或不喜欢这样的风格，但不可否认作品的音乐性。~~当然，也有色彩上乱七八糟、情绪上仿佛便秘的作品——比如说我写的——这时用难听来说那也是蛮合适的。~~ 对于一个作品的音乐性，我们可以从很多角度去进行分析: 旋律、节奏、结构、和声、配器、音色等等等等。不过在观念上切不可以本末倒置: **音乐总是先行的**，然后才是理论。分析，与其说是给作品设立范式，不如说是对音乐现象的解释。于是还是那句话: "先跟着听，然后开始。" 
 
 和声学是理解音乐现象的一个重要手段。当然，对于普通听众来说，这门学问并没什么意义。不过如果你碰巧也喜欢写歌，~~写的东西还贼难听，~~那它倒是可以带给你很多惊喜。我基本上都是东捣鼓一下，西捣鼓一下，学得都是些破碎的东西。稍稍翻过一下斯波索宾的《和声学教程》，觉得略为刻板，不过很对初学者胃口。接下来的内容主要是在抄 **Mark Levine** 的 **《爵士乐宝典》**(中译名真是有够奇怪的)，还有很多内容严重参考 b 站上的 up 主[季风季节](https://space.bilibili.com/195717286?from=search&seid=4639464503076851592)。 由于全然出于自用的目的，写法会极其个人化——换句话说，就不是给人看的了。
 
